--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.gallery_app">
+    package="com.mb30.gallery_app">
    <application
         android:label="gallery_app"
         android:name="${applicationName}"
