--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,11 @@ dependencies:
   get:
   google_fonts:
   skeleton_text:
-  photo_view: ^0.14.0
+  photo_view:
   sqflite:
-  path:
-  carousel_slider:
-  path_provider: ^2.0.11
   flutter_animate:
+  share_plus:
+  gallery_saver:
 
 dev_dependencies:
   flutter_test:
